// Copyright 2019 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.
syntax = "proto3";

package recipe_modules.recipe_engine.led;

import "go.chromium.org/luci/swarming/proto/api_v2/swarming.proto";

message InputProperties {
    reserved 1; // launched_by_led

    // TODO(iannucci) - Switch to either the buildbucket or swarming proto
    // messages.
    message CIPDInput {
        // The name of the CIPD package containing the recipe code being run.
        string package = 1;

        // The version of the recipes package in CIPD.
        string version = 2;
    }

    // led will set this property when `led edit-recipe-bundle` is *not* used,
    // or when testing with an older version of recipes from CIPD.
    CIPDInput cipd_input = 3;

    // A unique identifier for this led job. Unset if the current build is
    // not launched by led.
    string led_run_id = 4;

    // led sets this property for builds launched using `edit-recipe-bundle`.
    // The build can use this info to launch child led builds using the same
    // version of the recipes code.
    swarming.v2.CASReference rbe_cas_input = 5;

    // Bucket of the original build/builder the led build replicates from.
    //
    // The presence of this field also indicates that the current build is
    // a led real build. So its child builds (if triggered by led), will be
    // led real builds automatically.
    string shadowed_bucket = 6;
}
